--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
 <div class="index">
 
   
+  <article class="li">
+  <a href="http://gucj.github.io/post/%E4%B8%8D%E5%BF%98%E5%88%9D%E5%BF%83_first/">
+
+    <header class="clearfix">
+      <div class="pull-left">
+        <div class="image" style="background-image: url(http://gucj.github.io/images/default.jpg);"></div>
+      </div>
+
+      <div class="detail">
+        <time>Tue, Jun 14, 2016</time>
+        <h2 class="title">不忘初心_first</h2>
+      </div>
+    </header>
+
+    <div class="summary">不忘初心——第一篇 2016.6.14搭起博客，这是第一篇内容，作为记录。 希望不忘初心。</div>
+  </a>
+</article>
+
+  
 
   
 
@@ -47,7 +66,7 @@
 
     <div class="container">
       <footer class="site">
-        <p>&copy; 1 灰太狼的测试不归路</p>
+        <p>&copy; 2016 灰太狼的测试不归路</p>
         <p>Powered by <a href="http://gohugo.io" target="_blank" rel="nofollow">Hugo</a>, Theme <a href="https://github.com/dim0627/hugo_theme_aglaus" target="_blank" rel="nofollow">aglaus</a> designed by <a href="http://yet.unresolved.xyz" target="_blank" rel="nofollow">Daisuke Tsuji</a></p>
       </footer>
     </div>
